src/CAPI/CAPI_Settings.pas


//------------------------------------------------------------------------------
function Settings_Get_UEweight(): Double; CDECL;
begin
    Result := 0.0;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.UEWeight
end;
//------------------------------------------------------------------------------
procedure Settings_Set_LossRegs(ValuePtr: PInteger; ValueCount: TAPISize); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    ReAllocMem(DSSPrime.ActiveCircuit.LossRegs, Sizeof(Integer) * ValueCount);
    Move(ValuePtr^, DSSPrime.ActiveCircuit.LossRegs[1], ValueCount * SizeOf(Integer));
    DSSPrime.ActiveCircuit.NumLossRegs := ValueCount;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_LossWeight(Value: Double); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    DSSPrime.ActiveCircuit.LossWeight := Value
end;
//------------------------------------------------------------------------------
procedure Settings_Set_Trapezoidal(Value: TAPIBoolean); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    DSSPrime.ActiveCircuit.TrapezoidalIntegration := Value
end;
//------------------------------------------------------------------------------
procedure Settings_Set_UEregs(ValuePtr: PInteger; ValueCount: TAPISize); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    ReAllocMem(DSSPrime.ActiveCircuit.UERegs, Sizeof(Integer) * ValueCount);
    Move(ValuePtr^, DSSPrime.ActiveCircuit.UERegs[1], ValueCount * SizeOf(Integer));
    DSSPrime.ActiveCircuit.NumUEregs := ValueCount;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_UEweight(Value: Double); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    DSSPrime.ActiveCircuit.UEWeight := Value
end;
//------------------------------------------------------------------------------
function Settings_Get_ControlTrace(): TAPIBoolean; CDECL;
begin
    Result := FALSE;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.ControlQueue.TraceLog;
end;
//------------------------------------------------------------------------------
procedure Settings_Get_VoltageBases(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    i, Count: Integer;
begin
    if InvalidCircuit(DSSPrime) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;

    with DSSPrime.ActiveCircuit do
    begin
        {Count the number of voltagebases specified}
        i := 0;
        repeat
            Inc(i);
        until LegalVoltageBases^[i] = 0.0;
        Count := i - 1;

        DSS_RecreateArray_PDouble(ResultPtr, ResultCount, Count);
        Move(LegalVoltageBases[1], ResultPtr^, Count * SizeOf(Double));
    end
end;

procedure Settings_Get_VoltageBases_GR(); CDECL;
// Same as Settings_Get_VoltageBases but uses global result (GR) pointers
begin
    Settings_Get_VoltageBases(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure Settings_Set_ControlTrace(Value: TAPIBoolean); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    DSSPrime.ActiveCircuit.ControlQueue.TraceLog := Value;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_VoltageBases(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
        
    {LegalVoltageBases is a zero-terminated array, so we have to allocate
     one more than the number of actual values}
    with DSSPrime.ActiveCircuit do
    begin
        Reallocmem(LegalVoltageBases, SizeOf(Double) * (ValueCount + 1));
        Move(ValuePtr^, LegalVoltageBases[1], ValueCount * SizeOf(Double));
        LegalVoltageBases^[ValueCount + 1] := 0.0;
    end;
end;
//------------------------------------------------------------------------------
function Settings_Get_PriceCurve(): PAnsiChar; CDECL;
begin
    Result := NIL;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSS_GetAsPAnsiChar(DSSPrime, DSSPrime.ActiveCircuit.PriceCurve)
end;
//------------------------------------------------------------------------------
function Settings_Get_PriceSignal(): Double; CDECL;
begin
    Result := 0.0;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.Pricesignal
end;
//------------------------------------------------------------------------------
procedure Settings_Set_PriceCurve(const Value: PAnsiChar); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    with DSSPrime.ActiveCircuit do
    begin
        PriceCurve := Value;
        PriceCurveObj := DSSPrime.LoadShapeClass.Find(Pricecurve);
        if PriceCurveObj = NIL then
            DoSimpleMsg(DSSPrime, 'Price Curve: "%s" not found.', [PriceCurve], 5006);
    end;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_PriceSignal(Value: Double); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    DSSPrime.ActiveCircuit.PriceSignal := Value;
end;
//------------------------------------------------------------------------------
function Settings_Get_LoadsTerminalCheck(): TAPIBoolean; CDECL;
begin
    Result := DSS_CAPI_LOADS_TERMINAL_CHECK;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_LoadsTerminalCheck(Value: TAPIBoolean); CDECL;
begin
    DSS_CAPI_LOADS_TERMINAL_CHECK := Value;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_IterateDisabled(Value: Integer); CDECL;
begin
    DSS_CAPI_ITERATE_DISABLED := Value;
end;
//------------------------------------------------------------------------------
function Settings_Get_IterateDisabled(): Integer; CDECL;
begin
    Result := DSS_CAPI_ITERATE_DISABLED;
end;
//------------------------------------------------------------------------------
end.
